--- a/CanvasDrawing/Properties/Resources.resx
+++ b/CanvasDrawing/Properties/Resources.resx
@@ -118,6 +118,21 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="bulletb" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MainCharacter\bulletb.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cannon_down" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MainCharacter\cannon_down.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cannon_left" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MainCharacter\cannon_left.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cannon_right" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MainCharacter\cannon_right.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cannon_up" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MainCharacter\cannon_up.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Ghost" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Ghost.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
